--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
               aria-label="Tambahkan ke layar utama">
         Tambahkan ke Layar Utama
       </button>
+      <button id="close-pwa-popup" class="close-btn" aria-label="Tutup popup instalasi">
+      &times;
+      </button>
     </div>
   </div>
 
